# chip-8

./: .gitignore  README.md  main.py  pyproject.toml
chip8/: cpu.py  display.py  fonts.py  interpreter.py  memory.py  profiler.py
chip8/backends/: base.py  events.py  pygame.py  pysdl.py
tests/: conftest.py  test_cpu.py  test_fonts.py  test_interpreter.py  test_memory.py
tests/backends/: test_pygame.py  test_pysdl.py
