[tool.poetry]
name = "code-8"
version = "0.1.0"
description = ""
authors = ["Dan Bentley"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"
black = "^21.5b1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
